<resources>
    <string name="app_name">NYC Cycle Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="maxdateyear">maxdateyear</string>
    <string name="mindateyear">mindateyear</string>
    <string name="sharedpreference">sharedpreference</string>
    <string name="killedcyclists">Killed cyclists</string>
    <string name="injuredcyclists">Injured cyclists</string>
    <string name="loadingmessage">Loading data from the web, this could take a couple minutes...</string>
    <string name="action_settings">Settings</string>
    <string name="showloading">showloading</string>
    <string name="showinitialbutton">showinitialbutton</string>
    <string name="update">Update NYC Cycle Data</string>
    <string name="abouttext">This is created by Chris Sebesta, a NYC Cyclist, for NYC Cyclists.\n\nThis app visualizes motor vehicle collisions that involve injured or killed cyclist so that bicyclists can make informed decisions about the routes they choose and their safety. \n\nThis app was built using the NYC Open Data located at: https://data.cityofnewyork.us/Public-Safety/NYPD-Motor-Vehicle-Collisions/h9gi-nx95 \n\nThis is free open source software and the source code can be found at: https://github.com/zebesta/NYC-Cycle-Map</string>
    <string name="about">About</string>
    <string name="update_settings">Update data</string>
    <string name="sync_account_type">nyccyclemap.example.com</string>
    <string name="content_authority">com.example.chrissebesta.nyccyclemap.app</string>
    <string name="pref_previously_started">previouslystarted</string>
    <string name="mindatemonth">mindatemonth</string>
    <string name="maxdatemonth">maxdatemonth</string>
    <string name="main_screen_header">Choose map settings</string>
    <string name="cameraposition">CameraPosition</string>
    <string name="syncing">syncing</string>
    <string name="datehyphen">-</string>
    <string name="default_start_date">January 2012</string>
    <string name="default_end_date">December 2016</string>
    <string name="clear_database">Clear database</string>
    <string name="title_activity_detail">Details</string>
    <string name="unique_id_extra_key">UniqueID</string>
    <string name="app_token">3mx7VkvZunWhmDgpSUwreVmxO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_map_text">Update Map</string>

</resources>
