<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/clear_database_settings"
        android:orderInCategory="101"
        android:title="@string/clear_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/update_settings"
        android:orderInCategory="101"
        android:title="@string/update_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_settings"
        android:orderInCategory="102"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>