<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chrissebesta.nyccyclemap.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:id="@+id/refreshbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rfresh JSON data" />

    <Button
        android:id="@+id/brooklynButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Brooklyn" />

    <Button
        android:id="@+id/clearSQL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear SQL DB" />

    <Button
        android:id="@+id/mapDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Map Databse" />
    <CheckedTextView
        android:id="@+id/injuredCheckedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/injuredcyclists"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="true"
        android:padding="4dp"
        />
    <CheckedTextView
        android:id="@+id/killedCheckedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/killedcyclists"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="true"
        android:padding="4dp"
        />
    <com.appyvet.rangebar.RangeBar
        android:id="@+id/materialRangeBarWithDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
        <TextView
            android:id="@+id/loadingTextView"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/loadingmessage"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>
